--- a/APS_Scania.ipynb
+++ b/APS_Scania.ipynb
@@ -3839,6 +3839,21 @@
     "\n",
     "print(f'Total Cost is {totalcost}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Hello World!\n"
+    }
+   ],
+   "source": [
+    "print(\"Hello World!\")"
+   ]
   }
  ],
  "metadata": {
@@ -3857,7 +3872,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
